# circuitbreaker-lambda

./: .gitignore  .npmignore  CHANGELOG.md  LICENSE  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  tsup.config.ts  vitest.config.ts
.github/workflows/: ci.yml
example/: index.js  package.json  serverless.yml  template.yaml
examples/layer/: template.yaml
examples/layer/node/: index.mjs
examples/layer/python/: app.py
examples/minimal-layer/: index.mjs  template.yaml
examples/minimal-npm/: index.mjs  package.json  template.yaml
examples/sam/: index.mjs  package.json  template.yaml
layer/: build.sh
layer/extension/: Cargo.toml  Cross.toml
layer/extension/src/: circuit.rs  dynamodb.rs  main.rs  server.rs  types.rs
lib/: circuitbreaker.js
src/: cache.ts  dynamodb-provider.ts  index.ts  memory-provider.ts  middy.ts  types.ts
src/__tests__/: cache.test.ts  circuitbreaker.test.ts  dynamodb-provider.test.ts  memory-provider.test.ts  middy.test.ts
